--- a/web/WEB-INF/class/jdbc.properties
+++ b/web/WEB-INF/class/jdbc.properties
@@ -1,4 +1,4 @@
 m_driver=com.mysql.cj.jdbc.Driver
-m_url=jdbc:mysql://localhost:3306/javaweb
-m_username=javaweb
-m_password=7JPSGiLxZkpsi4wm
+m_url=jdbc:mysql://localhost:3306/javashop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+m_username=root
+m_password=16500
